--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
       <img src="https://images.unsplash.com/photo-1580910051071-1700c77bf00e?auto=format&fit=crop&w=800&q=80" alt="Разблокировка iPhone" class="w-full h-auto object-cover rounded-xl shadow-md zoom" />
       <img src="https://images.unsplash.com/photo-1581291518857-4e27b48ff24e?auto=format&fit=crop&w=800&q=80" alt="Ремонт Face ID" class="w-full h-auto object-cover rounded-xl shadow-md zoom" />
       <img src="https://images.unsplash.com/photo-1606813904603-9f32f623fdf4?auto=format&fit=crop&w=800&q=80" alt="Прошивка телефона" class="w-full h-auto object-cover rounded-xl shadow-md zoom" />
-      <img src="https://images.unsplash.com/photo-1616001808466-b7e3f72b6d6c?auto=format&fit=crop&w=800&q=80" alt="Ремонт микросхем" class="w-full h-auto object-cover rounded-xl shadow-md zoom" />
-      <img src="https://images.unsplash.com/photo-1625837688954-174ba3fc5c96?auto=format&fit=crop&w=800&q=80" alt="Замена платы" class="w-full h-auto object-cover rounded-xl shadow-md zoom" />
-      <img src="https://images.unsplash.com/photo-1624885934131-fb4051132ca3?auto=format&fit=crop&w=800&q=80" alt="Диагностика ИИ" class="w-full h-auto object-cover rounded-xl shadow-md zoom" />
+      <img src="https://easy-peasy.ai/ai-image-generator/images/phone-repair-detailed-operation-well-lit-shop" alt="Ремонт micro‑chips" class="w-full h-auto object-cover rounded-xl shadow-md zoom" />
+      <img src="https://easy-peasy.ai/ai-image-generator/images/local-cell-phone-repair-shop-skilled-technicians-quality-service" alt="Техник ремонтирует смартфон" class="w-full h-auto object-cover rounded-xl shadow-md zoom" />
+      <img src="https://easy-peasy.ai/ai-image-generator/images/anonymous-asian-male-technician-repairing-screen-of-5g-smartphone" alt="Ремонт экрана 5G телефона" class="w-full h-auto object-cover rounded-xl shadow-md zoom" />
     </div>
 
     <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
@@ -86,4 +86,3 @@
   </footer>
 </body>
 </html>
-
